--- a/js/template/home.html
+++ b/js/template/home.html
@@ -1,5 +1,5 @@
 <div>
-Verses
+Verses:
 <br>
 <!-- this selects the verse -->
   <select ng-model="verseGet" ng-options="verse.reference group by verse.topic for verse in verses">
@@ -13,5 +13,5 @@ Verses
     <!-- end of verse selection -->
 
   <hr>
-  Memorize
+  Memorize:
 </div>
