moved ctrls to service

--- a/js/template/home.html
+++ b/js/template/home.html
@@ -2,19 +2,20 @@
 Select a Verse:
 <br>
 <!-- this selects the verse -->
-  <select ng-model="verseGet" ng-options="verse.reference group by verse.topic for verse in verses">
+  <select ng-model="versesGet" ng-options="verse.reference group by verse.topic for verse in verses">
     <option value="">Select a Verse</option>
   </select>
   <div>
     <br>
-    {{verseGet.verseId}}  {{verseGet.reference}}<button type="submit" ng-click="addToMemArr()">Add</button><button type="submit" ng-click="verseGet = {verseid:'not in list', reference: ''}">Reset</button>
+    {{versesGet.verseId}}  {{versesGet.reference}}<button type="submit" ng-click="addToMemArr(versesGet)">Add</button><button type="submit" ng-click="versesGet = {verseid:'not in list', reference: ''}">Reset</button>
     <br>
     <br>
       </div>
     <!-- end of verse selection -->
   Enter a Verse
+  <br>
 
-<input type = "text" placeholder="Type in your Verse..." ng-model="typeVerse"><button type="submit" ng-click="typeToMemArr()">Add</button>
+<input type = "text" placeholder="Type in your Verse..." ng-model="typeVerse"><button type="submit" ng-click="typeToMemArr(typeVerse)">Add</button>
 
 
   <hr>
