added memorized conter

--- a/js/template/memorize.html
+++ b/js/template/memorize.html
@@ -1,8 +1,9 @@
 Memorized:
-# of Memorized: {{totalMemorized}}
+<br>
+  # of Verse Memorized: {{totalMemorized()}}
 
 <div ng-model="postToMemorized" ng-repeat="memorized in memorizedArr">
 
-  {{memorized.theVerse.verseId}} {{memorized.theVerse.reference}}{{memorized.typeVerse}}
+  {{memorized.theVerse.verseId}} {{memorized.theVerse.reference}} {{memorized.theTypeVerse}}
 
 </div>
