Added edit functionality

--- a/js/template/dashboard.html
+++ b/js/template/dashboard.html
@@ -1,6 +1,12 @@
-<hi>Hi!</hi>
+<h2>Hi! Janice</h2>
 
 <h3>Here's how you're doing.</h3>
 
-Active:  {{totalToMemorize}}
-Memorized:  {{totalMemorized}}
+<br>
+
+<h4>Active:  {{totalToMemorize}}</h4>
+
+<h4>Memorized:  {{totalMemorized}}</h4>
+
+<br>
+{{test}}
