--- a/js/template/home.html
+++ b/js/template/home.html
@@ -1,8 +1,7 @@
-<div>
-Select a Verse:
-<br>
+
+
 <!-- this selects the verse -->
-  <select ng-model="versesGet" ng-options="verse.reference group by verse.topic for verse in verses">
+  <!-- <select ng-model="versesGet" ng-options="verse.reference group by verse.topic for verse in verses">
     <option value="">Select a Verse</option>
   </select>
   <div>
@@ -10,26 +9,60 @@ Select a Verse:
     {{versesGet.verseId}}  {{versesGet.reference}}<button type="submit" ng-click="addToMemArr(versesGet)">Add</button><button type="submit" ng-click="versesGet = {verseid:'not in list', reference: ''}">Reset</button>
     <br>
     <br>
-      </div>
+      </div> -->
     <!-- end of verse selection -->
-  Enter a Verse
+<div class="container-fluid">
+  <div class="navbar-header">
+
+
+
+
+<h4 class="navbar-text navbar-left">Enter Text</h4>
+<form class="navbar-form navbar-left">
+<div class="form-group">
+  <input type = "text" class="form-control" placeholder="Topic" ng-model="typeVerse">
+  </div>
+<input type = "text" class="form-control" placeholder="Type in your Text..." ng-model="typeVerse">
+
+<button type="submit" class="btn btn-default" ng-click="typeToMemArr(typeVerse)">Add</button>
+</form>
+
+ <p class="navbar-text navbar-right">
+
+ Memorize: {{totalToMemorize()}} </p>
+<!-- <input type = "text" placeholder="Type in your Verse..." ng-model="typeVerse"><button type="submit" ng-click="typeToMemArr(typeVerse)">Add</button> -->
+</div>
+  </div>
+
+  <!-- end of navbar -->
+<div>
+
+
+<br>
+
+  <h4>Text Repository</h4>
+  <div class = "row">
+
+
   <br>
-
-<input type = "text" placeholder="Type in your Verse..." ng-model="typeVerse"><button type="submit" ng-click="typeToMemArr(typeVerse)">Add</button>
-
-
-  <hr>
-  Memorize:
-  <br>
-  # of Verse to Memorize: {{totalToMemorize()}}
+<verse-list>
 <div ng-repeat="myVerse in toMemorizeArr">
- {{myVerse.theVerse.verseId}} {{myVerse.theVerse.reference}}  {{myVerse.theTypeVerse}}
+ <!-- {{myVerse.theVerse.verseId}} {{myVerse.theVerse.reference}}   -->
+ <!-- {{myVerse.theTypeVerse}} -->
+
  <br>
+<div ng-hide="editorEnabled">
+  {{myVerse.theTypeVerse}}
 
- <button type="submit" ng-click="open(lg, $index, myVerse.theTypeVerse)">Memorized</button><button type="submit" ng-click="toDeleteMem($index)">Delete</button>
+ <button type="submit" class="btn btn-default" ng-click="open(lg, $index, myVerse.theTypeVerse)">Memorized</button><button type="submit" class="btn btn-default" ng-click="toDeleteMem($index)">Delete</button>
+ <button class="btn btn-default" ng-click="editorEnabled=!editorEnabled">Edit</button></div>
+ <div ng-show="editorEnabled">
+   <input ng-model="myVerse.theTypeVerse"><button ng-click="editorEnabled=!editorEnabled" class="btn btn-default">Done Editing</button>
+</div>
 
-  </div>
-
-  </div>
 
 </div>
+ </div>
+</verse-list>
+  </div>
+  </div>
