--- a/js/template/dashboard.html
+++ b/js/template/dashboard.html
@@ -3,6 +3,7 @@
 <h3>Here's how you're doing.</h3>
 
 <br>
+        <div class="col-sm-4"><progressbar class="progress-striped active" max="$scope.totalMemorized" value="$scope.totalToMemorize"   type=""><i>{{totalToMemorize}} / {{totalMemorized}}</i></progressbar></div>
 
 <h4>Active:  {{totalToMemorize}}</h4>
 
