--- a/js/template/home.html
+++ b/js/template/home.html
@@ -1,7 +1,5 @@
-
-
 <!-- this selects the verse -->
-  <!-- <select ng-model="versesGet" ng-options="verse.reference group by verse.topic for verse in verses">
+<!-- <select ng-model="versesGet" ng-options="verse.reference group by verse.topic for verse in verses">
     <option value="">Select a Verse</option>
   </select>
   <div>
@@ -10,55 +8,58 @@
     <br>
     <br>
       </div> -->
-    <!-- end of verse selection -->
+<!-- end of verse selection -->
 <div class="container-fluid">
   <div class="navbar-header">
+    <h4 class="navbar-text navbar-left">Enter Text</h4>
+    <form class="navbar-form navbar-left">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="Topic" ng-model="typeVerse.topic">
+      </div>
+      <input type="text" class="form-control" placeholder="Type in your Text..." ng-model="typeVerse.reference">
 
+      <button type="submit" class="btn btn-default" ng-click="typeToMemArr(typeVerse)">Add</button>
+    </form>
 
+    <p class="navbar-text navbar-right">
 
-
-<h4 class="navbar-text navbar-left">Enter Text</h4>
-<form class="navbar-form navbar-left">
-<div class="form-group">
-  <input type = "text" class="form-control" placeholder="Topic" ng-model="typeVerse.topic">
+      Memorize: {{totalToMemorize()}} </p>
+    <!-- <input type = "text" placeholder="Type in your Verse..." ng-model="typeVerse"><button type="submit" ng-click="typeToMemArr(typeVerse)">Add</button> -->
   </div>
-<input type = "text" class="form-control" placeholder="Type in your Text..." ng-model="typeVerse.reference">
-
-<button type="submit" class="btn btn-default" ng-click="typeToMemArr(typeVerse)">Add</button>
-</form>
-
- <p class="navbar-text navbar-right">
-
- Memorize: {{totalToMemorize()}} </p>
-<!-- <input type = "text" placeholder="Type in your Verse..." ng-model="typeVerse"><button type="submit" ng-click="typeToMemArr(typeVerse)">Add</button> -->
 </div>
-  </div>
 
-  <!-- end of navbar -->
+<!-- end of navbar -->
 <div>
-
-
-<br>
-
+  <br>
   <h4>Text Repository</h4>
-  <div class = "row">
-<verse-list>
-<div ng-repeat="myVerse in toMemorizeArr">
- <br>
-<div ng-hide="editorEnabled">
-  <h5>{{myVerse.theTypeVerse.topic}} </h5>
-  <p>
-{{myVerse.theTypeVerse.reference}}</p>
+  <div class="row">
 
- <button type="submit" class="btn btn-default" ng-click="open(lg, $index, myVerse.theTypeVerse)">Memorized</button><button type="submit" class="btn btn-default" ng-click="toDeleteMem($index)">Delete</button>
- <button class="btn btn-default" ng-click="editorEnabled=!editorEnabled">Edit</button></div>
- <div ng-show="editorEnabled">
-   <input ng-model="myVerse.theTypeVerse.reference"><button ng-click="editorEnabled=!editorEnabled" class="btn btn-default">Done Editing</button>
-</div>
+      <div ng-repeat="myVerse in toMemorizeArr">
+        <br>
+        <div ng-hide="editorEnabled">
+        <verse-list>
 
+          <h5>{{myVerse.topic}} </h5>
+          <p>
+            {{myVerse.reference}}</p>
 
-</div>
- </div>
+    <!-- buttons -->
+
+<div class="col-md-4 col-md-offset-9">
+
+    <button type="submit" class="btn btn-default" ng-click="open(lg, $index, myVerse.reference)">Memorized</button>
+    <button type="submit" class="btn btn-default" ng-click="toDeleteMem($index)">Delete</button>
+    <button class="btn btn-default" ng-click="editorEnabled=!editorEnabled">Edit</button>
+    </div>
+    <div ng-show="editorEnabled">
+      <input ng-model="myVerse.theTypeVerse.reference">
+      <button ng-click="editorEnabled=!editorEnabled" class="btn btn-default">Done Editing</button>
+    </div>
 </verse-list>
+</div>
+    <!-- end of buttons -->
+    </div>
+
   </div>
-  </div>
+
+</div>
