added date to memorized

--- a/js/template/dashboard.html
+++ b/js/template/dashboard.html
@@ -1,10 +1,7 @@
 <h2>Hi! Janice</h2>
 
-<h3>Here's how you're doing.</h3>
-
-<br>
-        <div class="col-sm-4"><progressbar class="progress-striped active" max="$scope.totalMemorized" value="$scope.totalToMemorize"   type=""><i>{{totalToMemorize}} / {{totalMemorized}}</i></progressbar></div>
-
+<h3>At a Glance</h3>
+<hr>
 <h4>Active:  {{totalToMemorize}}</h4>
 
 <h4>Memorized:  {{totalMemorized}}</h4>
