--- a/js/template/home.html
+++ b/js/template/home.html
@@ -40,7 +40,9 @@
         <verse-list>
 
           <h5>{{myVerse.topic}} </h5>
-          <p>
+          <!-- <p>
+            Date Added: {{myVerse.date}}</p>
+          <p> -->
             {{myVerse.reference}}</p>
 
     <!-- buttons -->
