--- a/js/template/memorize.html
+++ b/js/template/memorize.html
@@ -6,6 +6,9 @@ In Memory: {{totalMemorized()}}
 
 <verse-list>
  <h5>{{memorized.topic}}</h5>
+ <p>
+
+ Date Memorized: {{memorized.date | date:"longDate"}} </p>
 <p>
 
 {{memorized.reference}}</p>
