--- a/js/css/styles.css
+++ b/js/css/styles.css
@@ -7,3 +7,27 @@ textarea
     resize: none;
     vertical-align: middle;
   }
+
+.box {
+border: 1px solid #C4C4C4;
+margin: 10px;
+padding: 15px;
+border-radius: 4px
+}
+.myHeading{
+  margin: 14px;
+}
+
+p#glance{
+  font-size: 18px;
+
+}
+
+p#tally{
+  font-size: 18px;
+
+}
+#memlinks {
+  padding: 10px;
+  margin: 20px
+}
