changed sidebar nav

--- a/js/template/dashboard.html
+++ b/js/template/dashboard.html
@@ -1,8 +1,8 @@
 <div class="myHeading">
-
+<dir-color>
   <h2>Hi Janice!</h2>
 </div>
-
+</dir-color>
 <div class="row">
 
 <!-- first column -->
@@ -32,7 +32,6 @@
   <!-- second column -->
     <div class="col-md-6">
   <div class="box" id="quickAdd">
-
 
       <h3>Quick Add to Memorization List</h3>
       <hr>
