--- a/js/template/memcheck.html
+++ b/js/template/memcheck.html
@@ -1,17 +1,13 @@
-
         <div class="modal-header">
             <h3 class="modal-title">Type from Memory!</h3>
         </div>
         <div class="modal-body">
-<textarea id="textareaEdit" placeholder="You must type everything out exactly. Capitalization and punctuation counts!"  ng-model="typeMemVerse"></textarea>
+          <!-- Commented code below is the alert notification for the modal. This doesn't work yet. -->
+<!-- <textarea id="textareaEdit" placeholder="You must type everything out exactly. Capitalization and punctuation counts!"  ng-model="typeMemVerse"></textarea> -->
             <br>
           <div ng-model="showy" ng-show="wrong">
             <br>
-            <p>
-            
-            </p>
           </div>
-
             <br>
         </div>
         <div class="modal-footer">
