--- a/js/template/memcheck.html
+++ b/js/template/memcheck.html
@@ -2,15 +2,13 @@
             <h3 class="modal-title">Type from Memory!</h3>
         </div>
         <div class="modal-body">
-          <!-- Commented code below is the alert notification for the modal. This doesn't work yet. -->
-<!-- <textarea id="textareaEdit" placeholder="You must type everything out exactly. Capitalization and punctuation counts!"  ng-model="typeMemVerse"></textarea> -->
-            <br>
-          <div ng-model="showy" ng-show="wrong">
-            <br>
-          </div>
-            <br>
-        </div>
-        <div class="modal-footer">
+
+    <textarea id="textareaEdit" placeholder="You must type everything out exactly. Capitalization and punctuation counts!"  ng-model="typeMemVerse"></textarea>
+                <br>
+                <br>
+            </div>
+            <div class="modal-footer">
+
             <button class="btn btn-primary" ng-click="ok(typeMemVerse, $index)">Submit</button>
             <button class="btn btn-warning" ng-click="cancel()">Cancel</button>
         </div>
